--- a/src/SpectreHelpers.csproj
+++ b/src/SpectreHelpers.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <MinverMinimumMajorMinor>0.0</MinverMinimumMajorMinor>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="MinVer" Version="4.3.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
